# sara

./: .dockerignore  .env.example  .gitignore  ATTRIBUTION.md  Dockerfile  Dockerfile.clickhouse  LICENSE  MEMORY.md  README.md  docker-compose.yaml  main.py  pyproject.toml  render.yaml  safety_rl_pipeline.py
agents/sara_base/: config.py
agents/sheila/: __init__.py  a2a_client.py  a2a_conformant.py  a2a_server.py  a2a_tasks.py  a2a_turns.py  agent_card.py  api.py  config.py  judge.py  red_team.py  test_a2a.py  test_a2a_conformant.py  test_rule_margin.py
agents/targets/: __init__.py  (+2 more)
docs/: A.0 reconciliation  A.1_rename_phoebe_to_sheila.md  A.2_zk_attestation_L1_L2.md  A.5UI_CRT  A.5UI_Osprey   A3.RL_Light  A5  A5_Osprey  UI_TESTING.md  USER_TESTING_GUIDE.md  a2a_roadmap.md  determinism.md  reconciliation.md  review_a2a.md  review_all.md  review_boundary.md  review_crt.md  review_osprey.md  review_rl.md  review_sara-box.md  review_zk.md
osprey_rules/: main.sml
playbooks/: sara_default_v1.yaml
scripts/: train_dpo.py
src/: config.py  sara_default_v1.yaml
tests/: test_agent_framework.py  test_arena_audit.py  test_boundary.py  test_classifier_reasoning.py  test_crt_server.py  test_crypto.py  test_dpo_dataset.py  test_model_providers.py  test_monitor.py  test_openclaw_adapter.py  test_osprey_integration.py  test_osprey_ui.py  test_ozone.py  test_playbook_engine.py  test_prompt3_fixes.py  test_repro.py  test_safety_classifier.py  test_sara_a2a.py  test_sarabox.py  test_sheila_redteam.py  test_two_agent_boundary.py  test_ui_integration.py  test_ui_prompt5.py
(+162 files in other folders)
