[project]
name = "sandbox-arena"
version = "0.1.0"
description = "Sandbox Arena: AI Safety Red Teaming Marketplace with x402 Payments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.77.1",
    "click>=8.3.1",
    "clickhouse-connect>=0.10.0",
    "eth-account>=0.13.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "starlette>=0.45.0",
    "uvicorn>=0.34.0",
    "aiokafka>=0.12.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "structlog>=24.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "cryptography>=42.0.0",
    "trl>=0.7.0",
    "datasets>=2.14.0",
    "peft>=0.6.0",
    "transformers>=4.36.0",
]
